<resources>
    <string name="app_name">Android App With AWS</string>

    <string name="login">Login</string>
    <string name="loginWithGoogle">Login With Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="register">New to Raise The Bar? Register here</string>
    <string name="already_registered">Already Registered? Login here</string>
    <string name="remember_password">Remember Old Password? Login here</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="home">Home</string>
</resources>
